# mailogleit

./: README.md  mailogleit.py  pyproject.toml  requirements.txt
modules/: github.py  hudsonrock.py  instagram.py  snapchat.py  spotify.py
